[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidlib"
version = "0.0.1"
authors = [
  { name="Nil", email="voidpunk.glitch@gmail.com" },
]
description = "personal library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/voidpunk/voidlib"
"Bug Tracker" = "https://github.com/voidpunk/voidlib/issues"