[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidlib"
version = "0.0.2"
authors = [
  { name="Nil", email="voidpunk.glitch@gmail.com" },
]
description = "personal library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.24",
    "opencv-python >= 4.7",
    "pydicom >= 2.3",
    "matplotlib >= 3.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/voidpunk/voidlib"
"Bug Tracker" = "https://github.com/voidpunk/voidlib/issues"